<resources>
    <string name="app_name">Habit Tracker</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="confirm">Update</string>
    <string name="time_not_selected">Time: (not selected)</string>
    <string name="pick_a_time">hh : mm</string>
    <string name="date_not_selected">Date: (not selected)</string>
    <string name="give_it_a_short_description">Give it a short description</string>
    <string name="pick_a_date">dd/MM/yyyy</string>
    <string name="habit_title">Habit title</string>
    <string name="sugar">sugar</string>
    <string name="junk_food">junk food</string>
    <string name="porn_videos">porn videos</string>
    <string name="soccer">soccer</string>
    <string name="title_activity_intro">IntroActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="this_is_some_placeholder_text_for_the_intro_screen">This is some placeholder text for the intro screen</string>
    <string name="nothing_interesteing">Nothing interesteing</string>
    <string name="create">Create</string>
    <string name="add_a_habit">Add a habit!</string>
    <string name="title_big">Title Big</string>
    <string name="update">Update</string>
</resources>