<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.createhabit.CreateHabitItem">

    <!-- in order to have the good colors here, go to theme and change parent attribute to
    parent="Theme.MaterialComponents.DayNight.Bridge"-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/ll_textviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_habitTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#26A69A"
                android:hint="@string/habit_title"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_habitDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#26A69A"
                android:hint="@string/give_it_a_short_description"
                android:inputType="textShortMessage"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tv_date_selected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/ic_calendar"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/pick_a_date" />

            <EditText
                android:id="@+id/tv_timeSelected"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/ic_time"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/pick_a_time"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_habits_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:itemCount="10"
                tools:listitem="@layout/drawable_item" />

            <Button
                android:id="@+id/btn_confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_button"
                android:backgroundTint="#26A69A"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:text="@string/create"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>