<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.updatehabit.UpdateHabitItem">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <LinearLayout
            android:id="@+id/ll_textviews_update"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_habitTitle_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#26A69A"
                android:hint="Habit title"
                android:inputType="text"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/et_habitDescription_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:backgroundTint="#E65100"
                android:hint="Give it a short description"
                android:inputType="textShortMessage"
                android:textSize="20sp" />

            <EditText
                android:id="@+id/tv_date_selected_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/ic_calendar"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/pick_a_date" />

            <EditText
                android:id="@+id/tv_timeSelected_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:drawableEnd="@drawable/ic_time"
                android:clickable="false"
                android:focusable="false"
                android:hint="@string/pick_a_time"/>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rv_habits_item_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:clickable="true"
                tools:itemCount="10"
                tools:listitem="@layout/drawable_item" />

            <Button
                android:id="@+id/btn_confirm_update"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@drawable/round_button"
                android:backgroundTint="#26A69A"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?selectableItemBackground"
                android:text="@string/update"
                android:textColor="@android:color/white" />

        </LinearLayout>

    </ScrollView>

</RelativeLayout>